# bristol_osm_features

./: .gitignore  main.py  pyproject.toml
data/amenity_info/: all_amenities.json  amenity_groups.json
