[project]
name = "bristol-osm-features"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geojson>=3.2.0",
    "geopandas>=1.1.2",
    "project-paths>=1.1.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[tool.project-paths]
locations = "./location_polygons"
data = "./data"
